--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dioxus = "0.4.3"
-dioxus-web = "0.4.3"
 lol_stats = { path = "./lol_stats" }
 futures = "0.3.30"
+console_error_panic_hook = "0.1.6"
+dominator = "0.5.18"
+wasm-bindgen = "0.2.74"
+wasm-bindgen-futures = "0.4.24"
+futures-signals = "0.3.20"
+gloo-timers = { version = "0.3.0", features = ["futures"] }
+js-sys = "0.3.51"
+once_cell = "1.7.2"
+serde_json = "1.0.64"
+serde_derive = "1.0.126"
+serde = "1.0.126"
